# ms_blocking

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ms_blocking/: __init__.py  ms_blocking.py  utils.py
src/ms_blocking/datasets/: __init__.py  user_data.csv
tests/: test_ms_blocking.py
